--- a/Exercise1-Thomas/Exercise1.html
+++ b/Exercise1-Thomas/Exercise1.html
@@ -4,7 +4,7 @@
     <title>Mr.Watson webpage</title>
   </head>
   <body>
-    <h1>Thomas J.watson</h1>
+    <h1>Thomas</h1>
     <p>
       Thomas John Watson Sr. was born in February 17, 1874 and died in June 19,
       1956 after several remarkable accomplishments. Chairman as well as CEO of
