Added robot meta tags

--- a/week 2/Exercise1-Thomas/Exercise1.html
+++ b/week 2/Exercise1-Thomas/Exercise1.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="About thomas j watson">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="John Doe">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index,follow">
+    <a href=“https://www.example.com/product” rel=“ugc nofollow”>this</a>
     <title>Mr.Watson webpage</title>
   </head>
   <body>
