--- a/week 2/Exercise1-Thomas/Exercise1.html
+++ b/week 2/Exercise1-Thomas/Exercise1.html
@@ -7,6 +7,10 @@
     <meta name="author" content="John Doe">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index,follow">
+    <meta name="twitter:title" content="European Travel Destinations ">
+    <meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
+    <meta name="twitter:image" content=" http://euro-travel-example.com/thumbnail.jpg">
+    <meta name="twitter:card" content="summary_large_image">
     <a href=“https://www.example.com/product” rel=“ugc nofollow”>this</a>
     <title>Mr.Watson webpage</title>
   </head>
