--- a/week 3/Exercise1-Thomas/Exercise1.html
+++ b/week 3/Exercise1-Thomas/Exercise1.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8">
+    <meta name="description" content="About thomas j watson">
+    <meta name="keywords" content="HTML, CSS, JavaScript">
+    <meta name="author" content="John Doe">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="robots" content="index,follow">
+    <meta name="twitter:title" content="European Travel Destinations ">
+    <meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
+    <meta name="twitter:image" content=" http://euro-travel-example.com/thumbnail.jpg">
+    <meta name="twitter:card" content="summary_large_image">
+    <a href=“https://www.example.com/product” rel=“ugc nofollow”>this</a>
     <title>Mr.Watson webpage</title>
   </head>
   <body>
     <h1>Thomas</h1>
-    <h2>nishan</h2>
     <p>
       Thomas John Watson Sr. was born in February 17, 1874 and died in June 19,
       1956 after several remarkable accomplishments. Chairman as well as CEO of
