--- a/week 3/Exercise1-Thomas/Exercise1.html
+++ b/week 3/Exercise1-Thomas/Exercise1.html
@@ -11,11 +11,11 @@
     <meta name="twitter:description" content=" Offering tour packages for individuals or groups.">
     <meta name="twitter:image" content=" http://euro-travel-example.com/thumbnail.jpg">
     <meta name="twitter:card" content="summary_large_image">
-    <a href=“https://www.example.com/product” rel=“ugc nofollow”>this</a>
+    <a href=“https://www.example.com/product” rel=“ugc nofollow”></a>
     <title>Mr.Watson webpage</title>
   </head>
   <body>
-    <h1>Thomas</h1>
+    <h1>Thomas j watson </h1>
     <p>
       Thomas John Watson Sr. was born in February 17, 1874 and died in June 19,
       1956 after several remarkable accomplishments. Chairman as well as CEO of
