created a new folder and created a file under it

--- a/week 4/external.html
+++ b/week 4/external.html
@@ -5,39 +5,30 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Types of CSS</title>
+    <link rel="stylesheet" href="external.css" />
   </head>
   <body>
-    <h1 style="background-color: aqua; font-size: 60px; color: blue">
-      Types of CSS
-    </h1>
-    <h1
-      style="
-        background-color: rgb(177, 177, 177);
-        font-size: 40px;
-        color: brown;
-      "
-    >
-      Inline CSS
-    </h1>
-    <p style="font-size: 20px; background-color: rgb(185, 248, 227)">
+    <h1>Types of CSS</h1>
+    <h1>Inline CSS</h1>
+    <p>
       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Odio esse
       tenetur adipisci magni minus distinctio provident recusandae sit doloribus
       cumque quibusdam quasi, inventore ullam, id voluptatibus eligendi ad rem
       reprehenderit?
     </p>
-    <p style="font-size: 20px; background-color: bisque">
+    <p>
       Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aspernatur
       assumenda voluptatem, nulla voluptatibus, eaque blanditiis veritatis
       laborum fugit minima pariatur quam iure nihil cum porro, placeat sunt
       accusantium laboriosam quasi?
     </p>
-    <p style="font-size: 20px; background-color: rgb(236, 209, 169)">
+    <p>
       Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi accusantium
       sed ullam molestias placeat ex excepturi, doloribus aspernatur illum
       voluptas cum, similique alias explicabo, incidunt velit ratione numquam
       corporis debitis.
     </p>
-    <p style="font-size: 20px; background-color: rgb(202, 230, 230)">
+    <p>
       Lorem ipsum, dolor sit amet consectetur adipisicing elit. Amet pariatur
       omnis, reiciendis aperiam libero vero. Molestiae sint corporis dolorum
       harum maxime iste hic, exercitationem numquam animi itaque quaerat, alias
